--- a/templates/aws-ack-iam.yaml
+++ b/templates/aws-ack-iam.yaml
@@ -17,3 +17,6 @@ spec:
         valuesObject:
           aws:
             region: eu-west-1
+          serviceAccount:
+            annotations:
+              eks.amazonaws.com/role-arn: arn:aws:iam::218687456330:role/ack-iam-controller-irsa-role
