--- a/templates/aws-ack-iam.yaml
+++ b/templates/aws-ack-iam.yaml
@@ -1,22 +1,22 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: iam-chart
-spec:
-  destination:
-    namespace: ack-system
-    server: https://kubernetes.default.svc
-  project: default
-  syncPolicy:
-    automated: {}
-  sources:
-    - repoURL: public.ecr.aws/aws-controllers-k8s
-      chart: iam-chart
-      targetRevision: 1.1.0
-      helm:
-        valuesObject:
-          aws:
-            region: eu-west-1
-          serviceAccount:
-            annotations:
-              eks.amazonaws.com/role-arn: arn:aws:iam::218687456330:role/ack-iam-controller-irsa-role
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: iam-chart
+# spec:
+#   destination:
+#     namespace: ack-system
+#     server: https://kubernetes.default.svc
+#   project: default
+#   syncPolicy:
+#     automated: {}
+#   sources:
+#     - repoURL: public.ecr.aws/aws-controllers-k8s
+#       chart: iam-chart
+#       targetRevision: 1.1.0
+#       helm:
+#         valuesObject:
+#           aws:
+#             region: eu-west-1
+#           serviceAccount:
+#             annotations:
+#               eks.amazonaws.com/role-arn: arn:aws:iam::218687456330:role/ack-iam-controller-irsa-role
